@@ -1,6 +1,12 @@
 \name{NEWS}
 \title{News for Package \pkg{GGIRread}}
 \newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
+\section{Changes in version 0.0.3 (release date:15-09-2023)}{
+    \itemize{
+      \item Remove exclusion of recordings with less than 30 percent
+      valid ACC data in mergeGGIR as it seems a too stringent and hard to justify criteria.
+    }
+}
 \section{Changes in version 0.0.2 (release date:15-09-2023)}{
     \itemize{
       \item Improved handling of missing accelerometer files
